# SwiftySyncCommon

./: CMakeLists.txt  Data.cpp  Data.h  Data.hpp  Functions.h  Functions.hpp  Request.cpp  Request.h  Request.hpp  UUID.cpp  UUID.h  UUID.hpp  test.cpp
include/: Request.hpp
src/: Data.cpp
